src/test/deca/context/valid/def_affect/cast-float-int.deca
// Description:
//    Cast valide.
//
// Resultats:
//    a = 2

{
    float a;
    a = 2;
}