src/test/deca/context/invalid/def_affect/affect-float-bool.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 11: Affectation de types incompatibles.

{
   float a;

   // Doit etre refuse.
   a = true;
}
